Fixing line spacing between years.

--- a/oltos.css
+++ b/oltos.css
@@ -32,6 +32,10 @@ html, body {
   font-size: 125%;
 }
 
+.gallery .header div {
+  line-height: 125%;
+}
+
 .gallery .header a[href] {
   border: 0;
   text-decoration: none;
